# bountycaster-faq-ai

./: README.md  pyproject.toml
docs/: examples.md  faq.md  knowledge.md  reinforced.md
faqbot/: main.py
